# leap-frontend

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  __init__.py  executeFSMExtract.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  pypi.yml
docs/: conf.py  index.rst  requirements.txt
docs/source/: changelog.rst  conf.py  index.rst
docs/source/modules/: io.rst  (+1 more)
examples/: example.py  executeFSMExtract.py  extractWindow.py  graphReduce.py  mult.v  operator_hashing.py  run.sh  toy.blif  toy.opt.v  toy.v  toy_transformed.v  transform.py
examples/verilogs/: add.v  add2.v  add3.v  operators_precedence.v  toy_fsm.v
frontend/: __init__.py  test.py
frontend/algorithms/: __init__.py  cdfg.py  elaborateAssignment.py  exportDOT.py  extractFSM.py  extractGraph.py  mapping.py  run.sh
frontend/modules/: __init__.py  definitions.py  frame.py  module.py  netlist.py  ports.py  statement.py
frontend/reader/: __init__.py
frontend/utils/: __init__.py
frontend/verilog/: __init__.py  changeName.py  fixVerilog.py
frontend/writer/: __init__.py
leap/: __init__.py  test.py
leap/utils/: logger.py
leap/verilog/: __init__.py  changeName.py  systemverilog.lark  verilog.lark  verilog.py  verilogModule.py  verilogNumber.py  verilogReader.py  verilogUtils.py  verilogWriter.py
tests/: test.py  test_compatability.py  test_elaborate.py  test_frontend.py  test_fsm.py  test_init.py  test_lark.py  test_ports.py  test_ports_false.py  test_precedence.py  test_transformer.py  test_transformer_false.py  test_writer.py
tests/test_algorithms/: test_cdfg_elaborate.py  test_elaborate.py  test_from_graph.py  test_mapping.py  test_tograph.py
(+166 files in other folders)
